Fix theme on ios safari

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,5 +1,4 @@
 body {
-  --pink: rgb(255, 167, 196);
   --orange: rgb(245, 158, 71);
   --blue: #010183;
   background-color: var(--bg);
